prepare page views: home

--- a/src/main/webapp/WEB-INF/views/layout/foot.vm
+++ b/src/main/webapp/WEB-INF/views/layout/foot.vm
@@ -2,5 +2,6 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="#springUrl('/resources/js/bootstrap.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/jquery-1.10.2.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/scripts.js')"></script>
