--- a/src/main/webapp/WEB-INF/views/layout/footer.vm
+++ b/src/main/webapp/WEB-INF/views/layout/footer.vm
@@ -1,5 +1,5 @@
 <div id="footer">
 	<div class="container">
-		<p class="text-muted credit">&copy; Company 2013</p>
+		<p class="text-muted credit">&copy; Created by sunshine55</p>
 	</div>
 </div>
