--- a/src/main/webapp/WEB-INF/views/home.vm
+++ b/src/main/webapp/WEB-INF/views/home.vm
@@ -1,7 +1,37 @@
 #define($content)
-	<div class="page-header">
-	  <h1>Sticky footer with fixed navbar</h1>
+
+<div class="row clearfix">
+	<div class="col-md-4 column">		
+		<p>[logo image]</p>
 	</div>
-	<p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
-	<p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+	<div class="col-md-8 column">
+		<h1>Affable Spring Bean!</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dictum velit augue, pellentesque tincidunt nunc convallis sed. Aliquam sit amet tempus quam.</p>
+	</div>
+</div>
+
+<div class="row clearfix">
+	<div class="col-md-4 column">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dictum velit augue, pellentesque tincidunt nunc convallis sed. Aliquam sit amet tempus quam. Vivamus sodales leo dui. Nam lectus nibh, adipiscing ut mauris in, ultricies porta justo. Praesent mauris velit, fermentum ultrices ipsum in, dignissim porttitor ipsum.</p>
+	</div>
+	<div class="col-md-8 column">
+		<div class="row clearfix">
+			<div class="col-md-6 column">		
+				<p>[category 1]</p>
+			</div>
+			<div class="col-md-6 column">
+				<p>[category 2]</p>
+			</div>
+		</div>
+		<div class="row clearfix">
+			<div class="col-md-6 column">
+				<p>[category 3]</p>
+			</div>
+			<div class="col-md-6 column">
+				<p>[category 4]</p>
+			</div>
+		</div>
+	</div>
+</div>
+
 #end
