--- a/src/main/webapp/WEB-INF/views/layout/head.vm
+++ b/src/main/webapp/WEB-INF/views/layout/head.vm
@@ -1,18 +1,26 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Netbeans e-commerce tutorial: Spring Velocity Bootstrap">
+<meta name="author" content="sunshine55 - a gist of github">
 
-<title>Bootstrap 101 Template</title>
+<title>Affable Spring Bean</title>
 
-<!-- Bootstrap -->
-<link href="#springUrl('/resources/css/bootstrap.min.css')" rel="stylesheet" type="text/css" />
+<link href="#springUrl('/resources/css/bootstrap.min.css')" rel="stylesheet">
+<link href="#springUrl('/resources/css/style.css')" rel="stylesheet">
 
-<!-- Custom CSS -->
-<link href="#springUrl('/resources/css/starter-template.css')" rel="stylesheet" type="text/css" />
+<!--link rel="stylesheet/less" href="less/bootstrap.less" type="text/css" /-->
+<!--link rel="stylesheet/less" href="less/responsive.less" type="text/css" /-->
+<!--script src="js/less-1.3.3.min.js"></script-->
+<!--append ‘#!watch’ to the browser URL, then refresh the page. -->
 
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+  <script src="#springUrl('/resources/js/html5shiv.js')"></script>
 <![endif]-->
+
+<!-- Fav and touch icons -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="#springUrl('/resources/img/apple-touch-icon-144-precomposed.png')">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="#springUrl('/resources/img/apple-touch-icon-114-precomposed.png')">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="#springUrl('/resources/img/apple-touch-icon-72-precomposed.png')">
+<link rel="apple-touch-icon-precomposed" href="#springUrl('/resources/img/apple-touch-icon-57-precomposed.png')">
+<link rel="shortcut icon" href="#springUrl('/resources/img/favicon.png')">
