--- a/src/main/webapp/WEB-INF/views/layout/foot.vm
+++ b/src/main/webapp/WEB-INF/views/layout/foot.vm
@@ -5,3 +5,4 @@
 <script type="text/javascript" src="#springUrl('/resources/js/jquery-1.10.2.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/scripts.js')"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.0/holder.js"></script>
