--- a/src/main/webapp/WEB-INF/views/category.vm
+++ b/src/main/webapp/WEB-INF/views/category.vm
@@ -22,28 +22,10 @@
 		<table class="table table-striped">
 			<tbody>
 				<tr>
-					<td><img data-src="holder.js/140x90" alt="..."></td>
-					<td>description</td>
-					<td>price</td>
-					<td><button type="button" class="btn btn-primary">Add to cart</button></td>
-				</tr>
-				<tr>
-					<td><img data-src="holder.js/140x90" alt="..."></td>
-					<td>description</td>
-					<td>price</td>
-					<td><button type="button" class="btn btn-primary">Add to cart</button></td>
-				</tr>
-				<tr>
-					<td><img data-src="holder.js/140x90" alt="..."></td>
-					<td>description</td>
-					<td>price</td>
-					<td><button type="button" class="btn btn-primary">Add to cart</button></td>
-				</tr>
-				<tr>
-					<td><img data-src="holder.js/140x90" alt="..."></td>
-					<td>description</td>
-					<td>price</td>
-					<td><button type="button" class="btn btn-primary">Add to cart</button></td>
+					<td><img data-src="holder.js/142x80" alt="..." class="img-responsive"></td>
+					<td style="vertical-align: middle">description</td>
+					<td style="vertical-align: middle" class="text-center">price</td>
+					<td style="vertical-align: middle" class="text-right"><button type="button" class="btn btn-primary">Add to cart</button></td>
 				</tr>
 			</tbody>
 		</table>
