--- a/src/main/webapp/WEB-INF/views/layout/navbar.vm
+++ b/src/main/webapp/WEB-INF/views/layout/navbar.vm
@@ -13,11 +13,11 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="#">Cart</a>
+					<a href="#">Cart <span class="badge">0</sapn></a>
 				</li>
 				<li>
-					<a href="#">Checkout</a>
-				</li>
+					<a href="#">Checkout &#x279f;</a>
+				</li>				
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Languages<strong class="caret"></strong></a>
 					<ul class="dropdown-menu">
@@ -35,7 +35,7 @@
 					<input class="form-control" type="text">
 				</div>
 				<button type="submit" class="btn btn-default">Search</button>
-			</form>		
+			</form>
 		</div>
 	</div>
 </nav>
