--- a/src/main/webapp/WEB-INF/views/layout/foot.vm
+++ b/src/main/webapp/WEB-INF/views/layout/foot.vm
@@ -2,7 +2,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
-<script type="text/javascript" src="//codeorigin.jquery.com/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/scripts.js')"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.0/holder.js"></script>
