develop business logic: category

--- a/src/main/webapp/WEB-INF/views/home.vm
+++ b/src/main/webapp/WEB-INF/views/home.vm
@@ -19,24 +19,40 @@
 		<div class="row clearfix">
 			<div class="col-md-6 column">		
 				<div class="thumbnail">
-					<img data-src="holder.js/100%x180" alt="...">
+					<img src="#springUrl("/resources/img/products/${categoryList.get(0).name}.jpg")">
+					<div class="caption">
+				        <h4>$categoryList.get(0).name.toUpperCase()</h4>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>				        
+				    </div>
 				</div>
 			</div>
 			<div class="col-md-6 column">
 				<div class="thumbnail">
-					<img data-src="holder.js/100%x180" alt="...">
+					<img src="#springUrl("/resources/img/products/${categoryList.get(1).name}.jpg")">
+					<div class="caption">
+				        <h4>$categoryList.get(1).name.toUpperCase()</h4>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>				        
+				    </div>
 				</div>
 			</div>
 		</div>
 		<div class="row clearfix">
 			<div class="col-md-6 column">
-				<div class="thumbnail">
-					<img data-src="holder.js/100%x180" alt="...">
+				<div class="thumbnail">					
+					<img src="#springUrl("/resources/img/products/${categoryList.get(2).name}.jpg")">
+					<div class="caption">
+				        <h4>$categoryList.get(2).name.toUpperCase()</h4>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>				        
+				    </div>
 				</div>
 			</div>
 			<div class="col-md-6 column">
-				<div class="thumbnail">
-					<img data-src="holder.js/100%x180" alt="...">
+				<div class="thumbnail">					
+					<img src="#springUrl("/resources/img/products/${categoryList.get(3).name}.jpg")">
+					<div class="caption">
+				        <h4>$categoryList.get(3).name.toUpperCase()</h4>
+				        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>				        
+				    </div>
 				</div>
 			</div>
 		</div>
