--- a/src/main/webapp/WEB-INF/views/layout/navbar.vm
+++ b/src/main/webapp/WEB-INF/views/layout/navbar.vm
@@ -7,13 +7,13 @@
 			 	<span class="icon-bar"></span>
 			 	<span class="icon-bar"></span>
 			 </button>
-			 <a class="navbar-brand" href="#">AffableBean</a>
+			 <a class="navbar-brand" href="#springUrl('/')">AffableBean</a>
 		</div>
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li>
-					<a href="#">Cart <span class="badge">0</sapn></a>
+					<a href="#springUrl('/cart')">Cart <span class="badge">0</sapn></a>
 				</li>
 				<li>
 					<a href="#">Checkout &#x279f;</a>
