--- a/src/main/webapp/WEB-INF/views/layout/navbar.vm
+++ b/src/main/webapp/WEB-INF/views/layout/navbar.vm
@@ -16,7 +16,7 @@
 					<a href="#springUrl('/cart')">Cart <span class="badge">0</sapn></a>
 				</li>
 				<li>
-					<a href="#">Checkout &#x279f;</a>
+					<a href="#springUrl('/checkout')">Checkout &#x279f;</a>
 				</li>				
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Languages<strong class="caret"></strong></a>
