refine controllers + refine checkout views

--- a/src/main/webapp/WEB-INF/views/confirmation.vm
+++ b/src/main/webapp/WEB-INF/views/confirmation.vm
@@ -1,7 +1,7 @@
 #define($content)
 
-<div class="row clearfix">
-	<div class="col-md-12 column">		
+<div class="row">
+	<div class="col-xs-12 col-md-12">		
 		<div class="jumbotron">
 		  	<h1>Affable Spring Bean!</h1>
 		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>		  
@@ -9,40 +9,42 @@
 	</div>
 </div>
 
-<div class="row clearfix">
-	<div class="col-md-6 column">
+<div class="row">
+	<div class="col-xs-12 col-md-6">
 		<div class="row clearfix">
-			<div class="col-md-12 column">		
+			<div class="col-xs-12 col-md-12">		
 				<div class="jumbotron">		  
 				  <p>Order reference number, subtotal, tax, total, date processed</p>
 				</div>
 			</div>
 		</div>
-		<div class="row clearfix">
-			<div class="col-md-12 column">
+		<div class="row">
+			<div class="col-xs-12 col-md-12">
 				<div class="jumbotron">  
 				  <p>Customer details</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="col-md-6 column">
-		<table class="table table-striped">
-			<thead>
-				<tr>
-					<th class="text-center">Name</th>
-					<th class="text-center">Price</th>
-					<th class="text-center">Quantity</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td class="text-center">Name</td>
-					<td class="text-center">... &#36;</td>
-					<td class="text-center">Quantity</td>
-				</tr>
-			</tbody>
-		</table>
+	<div class="col-xs-12 col-md-6">
+		<div class="table-responsive">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th class="text-center">Name</th>
+						<th class="text-center">Price</th>
+						<th class="text-center">Quantity</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="text-center">Name</td>
+						<td class="text-center">... &#36;</td>
+						<td class="text-center">Quantity</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
 
