--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -1,139 +1,146 @@
 #define($content)
 
-<div class="row">
-	<div class="col-xs-12 col-md-12">		
-		<div class="jumbotron">
-		  	<h1>Affable Spring Bean!</h1>
-		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>		  
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-xs-12 col-md-6">
-		<div class="row">
-			<div class="col-xs-12 col-md-12">
-				<div class="well">
-					<ul>
-						<li><b>Next-day delivery is guaranteed.</b></li>
-						<li><b>A &#36;3.00 delivery surcharge is applied to all purchase order.</b></li>
-					</ul>				  
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 col-md-12">
-				<div class="panel panel-default">
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-sm-4 text-right">
-								<strong>Subtotal:</strong>
-							</div>
-							<div class="col-sm-8 text-right">
-								<strong>... USD</strong>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4 text-right">
-								<strong>Delivery surcharge:</strong>
-							</div>
-							<div class="col-sm-8 text-right">
-								<strong>... USD</strong>
-							</div>
-						</div>
-					</div>
-					<div class="panel-footer">
-						<div class="row">
-							<div class="col-sm-4 text-right">
-								<strong>Total:</strong>
-							</div>
-							<div class="col-sm-8 text-right">
-								<strong>... USD</strong>
-							</div>
-						</div>
-					</div>
-				</div>
+	#if($subTotal == 0)
+	<div class="row">
+		<div class="col-xs-12 col-md-12">		
+			<div class="jumbotron">
+			  	<h1>Affable Spring Bean!</h1>
+			  	<p>There's no item in your shopping cart!</p>
+			  	<p><a href="#springUrl('/')" class="btn btn-warning">Keep Shopping</a></p>
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-6">
-		<ul class="nav nav-tabs" id="checkoutTab">
-        	<li class="active"><a data-toggle="tab" href="#guest">Guest</a></li>
-        	<li class=""><a data-toggle="tab" href="#member">Member</a></li>
-      	</ul>
-		<div id="checkoutTabContent" class="tab-content well-lg">
-        	<div id="guest" class="tab-pane fade in active">
-          		<form class="form-horizontal">
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Name</label>
-          				<div class="col-sm-9">
-          					<input name="fullName" type="text" class="form-control" placeholder="Firstname Lastname">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Email</label>
-          				<div class="col-sm-9">
-          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Phone</label>
-          				<div class="col-sm-9">
-          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Address</label>
-          				<div class="col-sm-9">
-          					<input name="address" type="text" class="form-control" placeholder="123 Ave., St.Peterburg">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Region</label>
-          				<div class="col-sm-3">
-          					<select name="region" class="form-control">
-	          					<option value="1">Prague</option>
-	          					<option value="2">Benarl</option>
-	          					<option value="3">Hassen</option>
-	          				</select>
+	
+	#else
+	<div class="row">
+		<div class="col-xs-12 col-md-12">		
+			<div class="jumbotron">
+			  	<h1>Affable Spring Bean!</h1>
+			  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>		  
+			</div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+			<div class="row">
+				<div class="col-xs-12 col-md-12">
+					<div class="well">
+						<ul>
+							<li><b>Next-day delivery is guaranteed.</b></li>
+							<li><b>A &#36;3.00 delivery surcharge is applied to all purchase order.</b></li>
+						</ul>				  
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-4 text-right">
+									<strong>Subtotal:</strong>
+								</div>
+								<div class="col-sm-8 text-right">$subTotal USD</div>
+							</div>
+							<div class="row">
+								<div class="col-sm-4 text-right">
+									<strong>Delivery surcharge:</strong>
+								</div>
+								<div class="col-sm-8 text-right">3.00 USD</div>
+							</div>
+						</div>
+						<div class="panel-footer">
+							<div class="row">
+								<div class="col-sm-4 text-right">
+									<strong>Total:</strong>
+								</div>
+								<div class="col-sm-8 text-right">$total USD</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-12 col-md-6">
+			<ul class="nav nav-tabs" id="checkoutTab">
+	        	<li class="active"><a data-toggle="tab" href="#guest">Guest</a></li>
+	        	<li class=""><a data-toggle="tab" href="#member">Member</a></li>
+	      	</ul>
+			<div id="checkoutTabContent" class="tab-content well-lg">
+	        	<div id="guest" class="tab-pane fade in active">
+	          		<form class="form-horizontal">
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Name</label>
+	          				<div class="col-sm-9">
+	          					<input name="fullName" type="text" class="form-control" placeholder="Firstname Lastname">
+	          				</div>
 	          			</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-3 control-label">Credit Card</label>
-          				<div class="col-sm-9">
-          					<input name="ccNumber" type="text" class="form-control" placeholder="0123456789111213">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<div class="col-sm-offset-3 col-sm-9">
-          					<button type="submit" class="btn btn-primary">Purchase</button>
-          				</div>
-          			</div>
-          		</form>
-        	</div>
-        	<div id="member" class="tab-pane fade">
-          		<form class="form-horizontal">
-          			<div class="form-group">
-          				<label class="col-sm-2 control-label">Email</label>
-          				<div class="col-sm-10">
-          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<label class="col-sm-2 control-label">Phone</label>
-          				<div class="col-sm-10">
-          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
-          				</div>
-          			</div>
-          			<div class="form-group">
-          				<div class="col-sm-offset-2 col-sm-10">
-          					<button type="submit" class="btn btn-primary">Purchase</button>
-          				</div>
-          			</div>
-          		</form>	
-        	</div>
-      	</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Email</label>
+	          				<div class="col-sm-9">
+	          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Phone</label>
+	          				<div class="col-sm-9">
+	          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Address</label>
+	          				<div class="col-sm-9">
+	          					<input name="address" type="text" class="form-control" placeholder="123 Ave., St.Peterburg">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Region</label>
+	          				<div class="col-sm-3">
+	          					<select name="region" class="form-control">
+		          					<option value="1">Prague</option>
+		          					<option value="2">Benarl</option>
+		          					<option value="3">Hassen</option>
+		          				</select>
+		          			</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-3 control-label">Credit Card</label>
+	          				<div class="col-sm-9">
+	          					<input name="ccNumber" type="text" class="form-control" placeholder="0123456789111213">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<div class="col-sm-offset-3 col-sm-9">
+	          					<button type="submit" class="btn btn-primary">Purchase</button>
+	          				</div>
+	          			</div>
+	          		</form>
+	        	</div>
+	        	<div id="member" class="tab-pane fade">
+	          		<form class="form-horizontal">
+	          			<div class="form-group">
+	          				<label class="col-sm-2 control-label">Email</label>
+	          				<div class="col-sm-10">
+	          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<label class="col-sm-2 control-label">Phone</label>
+	          				<div class="col-sm-10">
+	          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<div class="col-sm-offset-2 col-sm-10">
+	          					<button type="submit" class="btn btn-primary">Purchase</button>
+	          				</div>
+	          			</div>
+	          		</form>	
+	        	</div>
+	      	</div>
+		</div>
 	</div>
-</div>
+	#end
 
 #end
