--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -67,47 +67,45 @@
 	        	<li class="active"><a data-toggle="tab" href="#guest">Guest</a></li>
 	        	<li class=""><a data-toggle="tab" href="#member">Member</a></li>
 	      	</ul>
+	      	
+	      	#springBind("customer")
 			<div id="checkoutTabContent" class="tab-content well-lg">
 	        	<div id="guest" class="tab-pane fade in active">
-	          		<form class="form-horizontal">
+	          		<form action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
 	          				<div class="col-sm-9">
-	          					<input name="fullName" type="text" class="form-control" placeholder="Firstname Lastname">
+	          					#springFormInput("customer.name" 'class="form-control" placeholder="Firstname Lastname"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Email</label>
 	          				<div class="col-sm-9">
-	          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@domain.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Phone</label>
 	          				<div class="col-sm-9">
-	          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
+	          					#springFormInput("customer.phone" 'class="form-control" placeholder="0123456789"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Address</label>
 	          				<div class="col-sm-9">
-	          					<input name="address" type="text" class="form-control" placeholder="123 Ave., St.Peterburg">
+	          					#springFormInput("customer.address" 'class="form-control" placeholder="123 Ave., St.Peterburg"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Region</label>
 	          				<div class="col-sm-3">
-	          					<select name="region" class="form-control">
-		          					<option value="PG">Prague</option>
-		          					<option value="BN">Benarl</option>
-		          					<option value="HS">Hassen</option>
-		          				</select>
+	          					#springFormSingleSelect("customer.cityRegion" $cityRegion 'class="form-control"')
 		          			</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Credit Card</label>
 	          				<div class="col-sm-9">
-	          					<input name="ccNumber" type="text" class="form-control" placeholder="0123456789111213">
+	          					#springFormInput("customer.ccNumber" 'class="form-control" placeholder="0123456789111213"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -118,17 +116,11 @@
 	          		</form>
 	        	</div>
 	        	<div id="member" class="tab-pane fade">
-	          		<form class="form-horizontal">
+	          		<form action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
 	          				<div class="col-sm-10">
-	          					<input name="email" type="email" class="form-control" placeholder="example@domain.com">
-	          				</div>
-	          			</div>
-	          			<div class="form-group">
-	          				<label class="col-sm-2 control-label">Phone</label>
-	          				<div class="col-sm-10">
-	          					<input name="phone" type="text" class="form-control" placeholder="0123456789">
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@domain.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
