--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -75,25 +75,27 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.name" 'class="form-control" placeholder="Firstname Lastname"')
+	          					#springFormInput("customer.name" 'required class="form-control" placeholder="Firstname Lastname"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Email</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@domain.com"')
+	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
+	          					<input type="hidden" id="validateMemberUrl" value="#springUrl('/validateMember')">
+	          					<div id="isValidMember"></div>
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Phone</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.phone" 'class="form-control" placeholder="0123456789"')
+	          					#springFormInput("customer.phone" 'required class="form-control" placeholder="0123456789"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Address</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.address" 'class="form-control" placeholder="123 Ave., St.Peterburg"')
+	          					#springFormInput("customer.address" 'required class="form-control" placeholder="123 Ave., St.Peterburg"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -105,7 +107,7 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Credit Card</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.ccNumber" 'class="form-control" placeholder="0123456789111213"')
+	          					#springFormInput("customer.ccNumber" 'required class="form-control" placeholder="0123456789111213"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -120,7 +122,7 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
 	          				<div class="col-sm-10">
-	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@domain.com"')
+	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
