--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -64,13 +64,29 @@
 		</div>
 		<div class="col-xs-12 col-md-6">
 			<ul class="nav nav-tabs" id="checkoutTab">
-	        	<li class="active"><a data-toggle="tab" href="#guest">Guest</a></li>
-	        	<li class=""><a data-toggle="tab" href="#member">Member</a></li>
+				<li class="active"><a data-toggle="tab" href="#member">Member</a></li>
+	        	<li class=""><a data-toggle="tab" href="#guest">Guest</a></li>
 	      	</ul>
 	      	
 	      	#springBind("customer")
 			<div id="checkoutTabContent" class="tab-content well-lg">
-	        	<div id="guest" class="tab-pane fade in active">
+				<div id="member" class="tab-pane fade in active">
+	          		<form action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
+	          			<div class="form-group">
+	          				<label class="col-sm-2 control-label">Email</label>
+	          				<div class="col-sm-10">
+	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
+	          					<div id="isValidMember"></div>
+	          				</div>
+	          			</div>
+	          			<div class="form-group">
+	          				<div class="col-sm-offset-2 col-sm-10">
+	          					<button type="submit" class="btn btn-primary">Purchase</button>
+	          				</div>
+	          			</div>
+	          		</form>
+	        	</div>
+	        	<div id="guest" class="tab-pane fade">
 	          		<form action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
@@ -83,7 +99,6 @@
 	          				<div class="col-sm-9">
 	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
 	          					<input type="hidden" id="validateMemberUrl" value="#springUrl('/validateMember')">
-	          					<div id="isValidMember"></div>
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -116,21 +131,6 @@
 	          				</div>
 	          			</div>
 	          		</form>
-	        	</div>
-	        	<div id="member" class="tab-pane fade">
-	          		<form action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
-	          			<div class="form-group">
-	          				<label class="col-sm-2 control-label">Email</label>
-	          				<div class="col-sm-10">
-	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
-	          				</div>
-	          			</div>
-	          			<div class="form-group">
-	          				<div class="col-sm-offset-2 col-sm-10">
-	          					<button type="submit" class="btn btn-primary">Purchase</button>
-	          				</div>
-	          			</div>
-	          		</form>	
 	        	</div>
 	      	</div>
 		</div>
