--- a/src/main/webapp/WEB-INF/views/layout/foot.vm
+++ b/src/main/webapp/WEB-INF/views/layout/foot.vm
@@ -4,4 +4,5 @@
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/bootstrap.min.js')"></script>
+<script type="text/javascript" src="#springUrl('/resources/js/jquery.validate.min.js')"></script>
 <script type="text/javascript" src="#springUrl('/resources/js/scripts.js')"></script>
