--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -63,20 +63,23 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-md-6">
-			<ul class="nav nav-tabs" id="checkoutTab">
+			<ul class="nav nav-tabs" id="checkout-tab">
 				<li class="active"><a data-toggle="tab" href="#member">Member</a></li>
-	        	<li class=""><a data-toggle="tab" href="#guest">Guest</a></li>
+	        	<li class=""><a data-toggle="tab" href="#guest">Register</a></li>
 	      	</ul>
 	      	
-	      	#springBind("customer")
 			<div id="checkoutTabContent" class="tab-content well-lg">
+				
+				#springBind("customer")
+				<input type="hidden" id="validateUrl" value="#springUrl('/validateMember')">
+				
 				<div id="member" class="tab-pane fade in active">
-	          		<form action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
+					<div id="valid-member"></div>
+	          		<form id="form-member" action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
 	          				<div class="col-sm-10">
-	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
-	          					<div id="isValidMember"></div>
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@mailinator.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -86,31 +89,32 @@
 	          			</div>
 	          		</form>
 	        	</div>
+	        	
 	        	<div id="guest" class="tab-pane fade">
-	          		<form action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
+	        		<div id="valid-guest"></div>
+	          		<form id="form-guest" action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.name" 'required class="form-control" placeholder="Firstname Lastname"')
+	          					#springFormInput("customer.name" 'class="form-control" placeholder="Firstname Lastname"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Email</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.email" 'required class="form-control" placeholder="example@domain.com"')
-	          					<input type="hidden" id="validateMemberUrl" value="#springUrl('/validateMember')">
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@mailinator.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Phone</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.phone" 'required class="form-control" placeholder="0123456789"')
+	          					#springFormInput("customer.phone" 'class="form-control" placeholder="012-345-6789"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Address</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.address" 'required class="form-control" placeholder="123 Ave., St.Peterburg"')
+	          					#springFormInput("customer.address" 'class="form-control" placeholder="123 Ave., St.Peterburg"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -122,7 +126,7 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Credit Card</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.ccNumber" 'required class="form-control" placeholder="0123456789111213"')
+	          					#springFormInput("customer.ccNumber" 'class="form-control" placeholder="012 345 6789 1011"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
