--- a/src/main/webapp/WEB-INF/views/checkout.vm
+++ b/src/main/webapp/WEB-INF/views/checkout.vm
@@ -79,7 +79,7 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
 	          				<div class="col-sm-10">
-	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@mailinator.com"')
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="e.g.: example@mailinator.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -96,25 +96,25 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.name" 'class="form-control" placeholder="Firstname Lastname"')
+	          					#springFormInput("customer.name" 'class="form-control" placeholder="e.g.: Firstname Lastname"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Email</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.email" 'class="form-control" placeholder="example@mailinator.com"')
+	          					#springFormInput("customer.email" 'class="form-control" placeholder="e.g.: example@mailinator.com"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Phone</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.phone" 'class="form-control" placeholder="012-345-6789"')
+	          					#springFormInput("customer.phone" 'class="form-control" placeholder="e.g.: 734-555-1212"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Address</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.address" 'class="form-control" placeholder="123 Ave., St.Peterburg"')
+	          					#springFormInput("customer.address" 'class="form-control" placeholder="e.g.: 123 Ave., St.Peterburg"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
@@ -126,7 +126,7 @@
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Credit Card</label>
 	          				<div class="col-sm-9">
-	          					#springFormInput("customer.ccNumber" 'class="form-control" placeholder="012 345 6789 1011"')
+	          					#springFormInput("customer.ccNumber" 'class="form-control" placeholder="e.g.: 0123456789101112131"')
 	          				</div>
 	          			</div>
 	          			<div class="form-group">
